<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_act__login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/BG_Blue"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="tqmgpartners.com.chivastv.act_Login">
    <tqmgpartners.com.chivastv.Utils.MyTextview
        android:id="@+id/tv_logoChivas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/App_Name"
        android:textSize="60dp"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_selector"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/strEmail"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/textview_selector"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/strPassword"
        android:textAlignment="center"/>
    <tqmgpartners.com.chivastv.Utils.MyButton
        android:background="@drawable/button_selector"
        android:id="@+id/btn_Login"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/strLogin"
        android:layout_height="60dp" />
    <tqmgpartners.com.chivastv.Utils.MyTextview
        android:id="@+id/tv_singUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/strSignUp"/>
</LinearLayout>
